* Updated Doxygen mainpage and roadmap

2011-11-16 Oliver Haag  <oliver.haag@gmail.com>
* Redesign of Hantek::Control to make it easier to add support for new models
* Removed buggy destructor from GlGenerator, proper cleanup still missing

2011-11-27 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Copy-paste in Hantek::Control::setOffset, thanks to tinosnitso

2011-12-02 Oliver Haag  <oliver.haag@gmail.com>
* Moved values needed to control gain into lists, initialized in connectDevice

2012-07-08 Oliver Haag  <oliver.haag@gmail.com>
* Exact pixelation in GlScope and LevelSlider

2012-09-01 Oliver Haag  <oliver.haag@gmail.com>
* Updated documentation with first DSO-2250 details
* General documentation improvements

2012-09-20 Oliver Haag  <oliver.haag@gmail.com>
* First attempt to add DSO-2250 support
* More documentation updates

2012-09-21 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Uninitialized bulk command pointer for BULK_FSETBUFFER
* Bugfix: Slot setTriggerPosition wasn't renamed

2012-10-01 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Wrong bit mask for extra bits in Hantek::Control::getData

2012-10-02 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Hantek::Control redesign missing for used channels
* Bugfix: Always check DataAnalyzer::data for null pointer

2012-10-03 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Add CAPTURE_READY2250 for the DSO-2250

2012-10-07 Oliver Haag  <oliver.haag@gmail.com>
* Ignore errors after first packet was received by Hantek::Device::bulkReadMulti

2012-10-17 Oliver Haag  <oliver.haag@gmail.com>
* Change back workaround for Mac OS that is most probably not required anymore
* Various performance improvements and small fixes
* New cppcheck build target

2012-10-28 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: DSO-2250 support, thanks to Dmitry Kolyadintsev
* Bugfix: Remove invalid divider for large buffers

2012-11-05 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: short instead of long int for DSO-2250 trigger offset